--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xnxx-api",
+  "name": "pckge-kurrxd",
   "version": "1.1.0",
-  "description": "My Rest Api Projectttttt",
+  "description": "kurrxd project",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -24,26 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "base-64": "^1.0.0",
-    "base32": "0.0.6",
-    "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
-    "mongodb": "^3.6.3",
-    "monk": "^7.3.3",
-    "morgan": "^1.10.0",
-    "needle": "^2.6.0",
-    "node-fetch": "^2.6.1",
-    "request": "^2.88.2",
-    "scrape-yt": "^1.4.8",
-    "ssl-express-www": "^3.0.7",
-    "tiktok-scraper": "^1.4.12",
-    "urlencode": "^1.1.0",
-    "ytdl-core": "^4.4.5",
-    "ytpl": "^2.0.5"
+    "base-64": "^1.0.0"
   },
   "homepage": "https://github.com/Zhirrr/Zhirrr-Api#readme"
 }
